Improvements to 1.21.8 Port